# SkyProCoursework_02

./: README.md  main.py  pyproject.toml  requirements.txt
src/: abstract_classes.py  hh_api.py  json_handler.py  vacancy.py
tests/: test_filters.py  test_hh_api.py  test_integration.py  test_json_handler.py  test_vacancy.py
